# CooperativeExplorationSimulation

./: CMakeLists.txt
src/: main.cpp
src/agent/: Agent.cpp  Agent.h  AgentContext.cpp  AgentContext.h
src/agent/roles/: CoordinatorRole.cpp  CoordinatorRole.h  ExplorerRole.cpp  ExplorerRole.h  IRole.h
src/environment/: Cell.h  CellState.cpp  CellState.h  Grid.cpp  Grid.h  Point.h
src/exceptions/: AgentInitializationException.h  CoordinatorAssignationException.h  ReadGridException.h
src/simulation/: Simulation.cpp  Simulation.h
src/ui/: ConsoleDrawer.cpp  ConsoleDrawer.h  DrawableCharacters.h  GUIDrawer.cpp  GUIDrawer.h  IDrawable.h
